--- a/bower.json
+++ b/bower.json
@@ -13,8 +13,5 @@
     "infinni-ui",
     "ui-framework"
   ],
-  "license": "GPL",
-  "dependencies": {
-    "jsoneditor": "~5.5.2"
-  }
+  "license": "GPL"
 }
