--- a/bower.json
+++ b/bower.json
@@ -13,5 +13,8 @@
     "infinni-ui",
     "ui-framework"
   ],
-  "license": "GPL"
+  "license": "GPL",
+  "dependencies": {
+    "infinni-ui-metadata": "latest"
+  }
 }
