--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "infinni-ui",
-  "version": "2.2.14",
+  "version": "3.0.0",
   "description": "Framework for lightning fast web apps creation",
   "keywords": [
     "infinniui"
@@ -35,30 +35,30 @@
   },
   "devDependencies": {
     "browser-sync": "^2.12.x",
+    "chai": "^3.5.0",
     "del": "^2.2.0",
-    "gulp": "github:gulpjs/gulp#4.0",
-    "gulp-cli": "^1.2.2",
+    "edit-mask": "https://bitbucket.org/puritania74/edit-mask.git",
+    "eslint": "^3.19.0",
+    "eslint-plugin-filenames": "^1.2.0",
+    "gulp": "git+https://git@github.com/gulpjs/gulp/#4.0",
+    "gulp-append-prepend": "^1.0.3",
     "gulp-autoprefixer": "^3.1.0",
+    "gulp-cli": "^1.2.2",
     "gulp-concat": "^2.6.0",
     "gulp-csso": "^2.0.0",
     "gulp-debug": "^2.1.2",
+    "gulp-eslint": "^3.0.1",
+    "gulp-help-doc": "^1.1.0",
     "gulp-if": "^2.0.1",
     "gulp-less": "^3.1.0",
     "gulp-load-plugins": "^1.2.x",
-    "gulp-myth": "^1.1.0",
-    "gulp-newer": "^1.1.0",
-    "gulp-notify": "^1.7.x",
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.5.4",
-    "gulp-sourcemaps": "^1.6.0",
     "gulp-template-compile": "^1.2.0",
     "gulp-uglify": "^1.5.3",
     "gulp-watch": "^4.x",
     "gulp-wrapper": "^1.0.0",
-    "chai": "^3.5.0",
     "jasmine-core": "^2.6.1",
-    "jquery": "1.12.4",
-    "jquery.cookie": "1.4.1",
     "karma": "^1.6.0",
     "karma-chai-plugins": "^0.9.0",
     "karma-chrome-launcher": "^2.0.0",
@@ -68,16 +68,29 @@
     "karma-mocha": "^1.3.0",
     "karma-mocha-reporter": "^2.2.3",
     "karma-teamcity-reporter": "^1.0.0",
-    "mocha": "^2.x",
-    "stream-combiner2": "1.1.1",
-    "through2": "2.x"
+    "mocha": "2.x",
+    "npm": "^4.5.0",
+    "npm-install-peers": "^1.1.0",
+    "require-dir": "^0.3.1",
+    "streamqueue": "^1.1.1"
+  },
+  "peerDependencies": {
+    "backbone": "^1.1.2",
+    "block-ui": "^2.70.1",
+    "font-awesome": "^4.7.0",
+    "jquery": "^1.12.4",
+    "jquery.cookie": "^1.4.1",
+    "moment": "^2.18.0",
+    "signalr": "^2.2.1",
+    "toastr": "^2.1.2",
+    "underscore": "^1.8.3"
   },
   "scripts": {
-    "build-full": "npm i && bower i && npm run build",
-    "build": "gulp clean && gulp build",
+    "build-full": "npm i && npm-install-peers && npm run build",
+    "build": "gulp clean && gulp build:prod",
     "pack": "npm run build-full && gulp assemble:package",
     "pack-for-teamcity": "gulp assemble:package",
-    "test": "karma start my.conf.js",
-    "test:tc": "karma start my.conf.js --single-run  --reporters teamcity --colors false --browsers Firefox"
+    "test": "karma start karma.conf.js",
+    "test:tc": "npm run test -- --single-run --reporters teamcity --colors false --browsers Firefox"
   }
 }
