--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "infinni-ui",
-  "version": "2.2.14",
+  "version": "2.2.15",
   "description": "Framework for lightning fast web apps creation",
   "keywords": [
     "infinniui"
@@ -34,6 +34,7 @@
     "url": "https://github.com/InfinniPlatform/InfinniUI/issues"
   },
   "devDependencies": {
+    "bower": "~1.8.0",
     "browser-sync": "^2.12.x",
     "del": "^2.2.0",
     "gulp": "github:gulpjs/gulp#4.0",
